--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Google-Redirect",
-  "description": "Make the current page red",
+  "name": "Reddit-Redirect",
+  "description": "Short cut to reddit",
   "version": "2.0",
   "permissions": [
     "notifications",
@@ -11,11 +11,11 @@
 	"https://*/*"
   ],
   "background": {
-    "scripts": ["background.js"],
+    "scripts": ["popup.js"],
     "persistent": false
   },
   "browser_action": {
-    "default_title": "Make this page red"
+    "default_title": "Go to reddit!"
   },
   "manifest_version": 2
 }
