--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
 	"https://*/*"
   ],
   "background": {
-   	"scripts": ["right.js","alert.js"]
+   	"scripts": ["right.js"]
   },
   "browser_action": {
     "default_title": "Go to reddit!",
