It should work but is untested.

--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
   },
   "browser_action": {
     "default_title": "Go to reddit!",
-    "default_popup": "background.html"
+    "default_popup": "popup.html"
   },
   "manifest_version": 2
 }
